# Dap-Sampler

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/dap/: protocol.rs  swd.rs
src/elf/: dwarf.rs  mod.rs  parser.rs  tree.rs  types.rs
src/pipeline/: engine.rs  ring_buffer.rs  sample.rs
src/ui/: app.rs  channel_panel.rs  controls.rs  cursor.rs  display_buffer.rs  mod.rs  variable_browser.rs  watch_panel.rs  waveform.rs
src/usb/: device.rs  transfer.rs
tests/: test_commands.rs  test_integration.rs  test_protocol.rs  test_ring_buffer.rs  test_sample.rs  test_ui.rs  test_variable_tree.rs  test_watch_transform.rs
