[package]
name = "dap-sampler"
version = "0.1.0"
edition = "2021"
description = "CMSIS-DAP v2 High-Speed Variable Sampler (P1)"

[dependencies]
rusb = "0.9"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
spin_sleep = "1"

# P3: GUI
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"

# P4: ELF/DWARF 解析
object = { version = "0.36", default-features = false, features = ["read_core", "elf", "std"] }
gimli = { version = "0.31", default-features = false, features = ["read", "std"] }

# P4: 文件对话框
rfd = "0.15"

# 运行时加载窗口图标（PNG -> RGBA），eframe 已间接依赖 image
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
# 嵌入 Windows exe 图标
winres = "0.1"
